--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "fs": "^0.0.1-security",
     "html-react-parser": "^5.2.6",
     "isomorphic-dompurify": "^2.26.0",
     "jose": "^6.0.12",
@@ -34,6 +35,7 @@
     "mysql2": "^3.14.3",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
+    "path": "^0.12.7",
     "react": "19.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.4",
